--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -16,8 +16,8 @@
 <% else %>
     <%= tag.tr do %>
         <%= tag.td class: "px-6 py-4 whitespace-no-wrap border-b border-blue-200" do %>
-            <div class="flex">
-                <span class="text-sm leading-5 font-medium text-gray-900 mr-2"><%= note.try(:reify) ? note.reify.title : note.title %></span>
+            <div class="flex items-start">
+                <span class="text-sm leading-5 font-medium text-gray-900 mr-2 mb-2"><%= note.try(:reify) ? note.reify.title : note.title %></span>
                 <% if note.try(:reify) %>
                     <%= render partial: "shared/misc/badge", locals: { status: "Public" } if note.reify.public %>
                     <%= render partial: "shared/misc/badge", locals: { status: "Pinned" } if note.reify.pinned %>
@@ -25,18 +25,6 @@
                     <%= render partial: "shared/misc/badge", locals: { status: "Public" } if note.public %>
                     <%= render partial: "shared/misc/badge", locals: { status: "Pinned" } if note.pinned %>
                 <% end %>            
-            </div>
-            <div class="text-sm leading-5 text-gray-500">
-                <% if params[:action] == "index" %>
-                    <%= link_to 'Edit', edit_note_path(note), class: "text-blue-500 hover:text-blue-600 focus:outline-none focus:text-blue-900" %>
-                    <%= link_to 'Preview', note_path(note), class: "text-blue-500 hover:text-blue-600 focus:outline-none focus:text-blue-900" %>
-                <% end %>
-                <% if params[:action] == "versions" %>
-                    <%= link_to 'Preview', version_note_path(@note, note), class: "text-blue-500 hover:text-blue-600 focus:outline-none focus:text-blue-900" %>
-                <% end %>
-                <% if params[:action] == "deleted" %>
-                    <%= link_to 'Restore Note', restore_note_path(note.id), method: :post, class: "text-blue-500 hover:text-blue-600 focus:outline-none focus:text-blue-900" %>
-                <% end %>
             </div>
         <% end %>
         <%= tag.td class: "px-6 py-4 whitespace-no-wrap border-b border-blue-200 text-sm leading-5 text-gray-500" do %>
@@ -48,6 +36,18 @@
         <% end %>
         <%= tag.td class: "px-6 py-4 whitespace-no-wrap border-b border-blue-200 text-sm leading-5 text-gray-500" do %>
             <%= note.try(:reify) ? "#{time_ago_in_words(note.reify.updated_at)} ago" : "#{time_ago_in_words(note.updated_at)} ago" %>
+            <div class="text-xs leading-5 text-gray-500 flex">
+                <% if params[:action] == "index" %>
+                    <%= link_to 'Edit Note', edit_note_path(note), class: "text-blue-500 hover:text-blue-600 focus:outline-none focus:text-blue-900 pr-1" %>
+                    <%= link_to 'Preview Note', note_path(note), class: "text-blue-500 hover:text-blue-600 focus:outline-none focus:text-blue-900 pl-1" %>
+                <% end %>
+                <% if params[:action] == "versions" %>
+                    <%= link_to 'Preview', version_note_path(@note, note), class: "text-blue-500 hover:text-blue-600 focus:outline-none focus:text-blue-900" %>
+                <% end %>
+                <% if params[:action] == "deleted" %>
+                    <%= link_to 'Restore Note', restore_note_path(note.id), method: :post, class: "text-blue-500 hover:text-blue-600 focus:outline-none focus:text-blue-900" %>
+                <% end %>
+            </div>            
         <% end %>
     <% end %>
 <% end %>
