--- a/app/views/shared/navigation/_desktop.html.erb
+++ b/app/views/shared/navigation/_desktop.html.erb
@@ -6,6 +6,7 @@
         <%= render "shared/navigation/menu_links_desktop" if current_user %>
       </div>
       <%= render "shared/navigation/profile_links_desktop" if current_user %>
+      <%= render "shared/navigation/login_desktop" unless current_user %>
       <%= render "shared/navigation/mobile_button" %>
     </div>
   </div>
