--- a/app/views/notes/_search_form.html.erb
+++ b/app/views/notes/_search_form.html.erb
@@ -1,14 +1,22 @@
 <%= search_form_for @q do |f| %>
-    <%= f.label :title_cont %>
-    <%= f.search_field :title_cont %>
-    <%= f.label :body_cont %>
-    <%= f.search_field :body_cont %>
-    <%= tag.fieldset do %>
-        <%= tag.legend do %>
-            Tags
+    <div class="md:flex md:-mx-2">
+        <div class="field flex-1 md:px-2">
+            <%= f.label :title_cont %>
+            <%= f.search_field :title_cont, class: "input" %>
+        </div>
+        <div class="field flex-1 md:px-2">
+            <%= f.label :body_cont %>
+            <%= f.search_field :body_cont, class: "input" %>
+        </div>
+    </div>
+    <div class="field">
+        <%= tag.fieldset do %>
+            <%= tag.legend do %>
+                Tags
+            <% end %>
+            <%= f.collection_check_boxes :tags_id_in, current_user.notes.tag_counts_on(:tags), :id, :name %>
         <% end %>
-        <%= f.collection_check_boxes :tags_id_in, current_user.notes.tag_counts_on(:tags), :id, :name %>
-    <% end %>
+    </div>
     <%= f.label :pinned_eq, 'Pinned?' %>
     <%= check_box_tag 'q[pinned_eq]', true, params[:q].present? ? params[:q][:pinned_eq] : false %>
     <%= f.label :public_eq, 'Public?' %>
